# shodan-report

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  conftest.py  pyproject.toml  requirements.txt
.cache/: cve_cache.json
.cache/shodan_report/: cve_cache.json
archive/CustomerX/: 2026-01_5.6.7.8.json
archive/CustomerY/: 2026-01_8.8.8.8.json
archive/TestCustomer/: 2026-01_1.2.3.4.json
assets/sales_cockpit/: README.md  index.html
config/: evaluation.yaml  example.yaml
config/customers/: example.yaml
docs/: CHINANET_REPORT.md  DETAILED_README.md
examples/: README.md  run_demo.ps1
scripts/: README.md  _extract_pdf_text_short.py  check_cves_and_mdata.py  compare_management_texts.py  debug_chinanet.py  debug_enrich.py  debug_inspect.py  fetch_nvd_feeds.py  generate_chinanet_demo.py  generate_chinanet_demo_full.py  generate_clean_pdf.py  generate_demo_pdf.py  generate_demo_pdf_nvd_v2.py  generate_demo_pdf_real_api.py  generate_demo_pdf_with_nvd.py  generate_executive_pdf.py  generate_free_pdf.py  generate_from_snapshot.py  generate_from_snapshot_fixed.py  generate_from_snapshot_google.py  generate_report_from_shodan.py  generate_sales_snapshots.py  generate_shodan_report_softened.py  generate_text_report.py  print_trends.py  render_pdf_pages.py  run-example.sh  run-jobs-direct.py  run-one-verbose.py  run_compare_reports.py  run_generate_telepower.py  run_generate_testcustomer.py  run_jobs_wrapper.py
scripts/dev/: _import_test_enricher.py  debug_chinanet.py  debug_prepare_technical.py  debug_version_eval.py  demo_generate_pdf_chinanet.py  generate_demo_pdfs.py  inspect_clean.py  inspect_elements.py
scripts_v2/: tmp_run_nvd_indicator.py  tmp_run_nvd_indicator_cve.py
src/: raw_shodan_output.json
src/output/: asset_snapshot.json  evaluation.json  raw_shodan_output.json
src/shodan_report/: cli.py  evaluation.py  main.py  management_text.py  models.py  paths.py  pdf_manager.py  risk_prioritization.py  shodan_client.py  snapshot_manager.py  technical_appendix.py  trend.py  utils.py
src/shodan_report/archiver/: __init__.py  core.py  report_archiver.py  snapshot_archiver.py  version_manager.py
src/shodan_report/clients/: __init__.py  circl_client.py  cisa_client.py  domain_scout.py  epss.py  exploitdb.py  greynoise.py  hibp.py  nvd_client.py  nvd_local.py  (+1 more)
src/snapshots/: 2024-06_snapshot_kunde1.json
(+183 files in other folders)
