[project]
name = "shodan-report"
version = "0.1.0"
description = "Automatisierte externe Sicherheitsreports auf Basis von Shodan"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Ox4D"", email = "email@email.de"}
]

dependencies = [
    "python-dotenv",
    "shodan"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "mypy",
    "ruff"
]

[project.scripts]
shodan-report = "shodan_report.cli:main"

# Für Windows GUI apps (optional)
[project.gui-scripts]
shodan-report-gui = "shodan_report.cli:main"  # Falls du mal GUI willst

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

# Optional: Für bessere Entwicklung
[tool.setuptools.packages.find]
where = ["src"]
include = ["shodan_report*"]