[project]
name = "shodan-report"
version = "0.1.0"
description = "Automatisierte externe Sicherheitsreports auf Basis von Shodan"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Ox4D", email = "email@email.de"} 
]

dependencies = [
    "python-dotenv",
    "shodan",
    "pyyaml"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "mypy",
    "ruff"
]

[project.scripts]
shodan-report = "shodan_report.cli:main"

# Optional: Für bessere Entwicklung
[tool.setuptools.packages.find]
where = ["src"]
include = ["shodan_report*"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"