[project]
name = "shodan-report"
version = "0.1.0"
description = "Automatisierte externe Sicherheitsreports auf Basis von Shodan"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Ox4D", email = "email@email.de"} 
]

dependencies = [
    "python-dotenv",
    "shodan",
    "pyyaml",
    "reportlab>=3.6",
    "python-dateutil>=2.8",
    "packaging>=21.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black",
    "mypy",
    "ruff",
    "PyPDF2>=3.0",
    "boto3>=1.26",
    "moto>=4.0"
]

[project.scripts]
shodan-report = "shodan_report.cli:main"

# Optional: Für bessere Entwicklung
[tool.setuptools.packages.find]
where = ["src"]
include = ["shodan_report*"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"